# gce-ipx800

./: .editorconfig  .gitignore  CHANGELOG.md  Pipfile  README.md  README.rst  cliff.toml  pyproject.toml  requirements_dev.txt  taskfile.yml
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: coverage.yml  main.yml  package.yml  release.yml
docs/: conf.py  index.rst
ipx800/: __init__.py  ipx800.py
src/gce_ipx800/: __init__.py  ipx800.py
tests/: clearr2.json  error.json  geta.json  getall.json  getc.json  getr.json  getvi.json  getvo.json  ipx800.py  setr2.json  test_ipx800.py
