[tool.poetry]
name = "gce-ipx800"
version = "0.7.0"
description = "Library to interact with the GCE Electronics IPX800 device"
authors = ["Marc-Aurèle Brothier <m@brothier.org>"]
license = "Apache-2.0"
readme = 'README.rst'
repository = "https://github.com/marcaurele/gce-ipx800"
homepage = "https://github.com/marcaurele/gce-ipx800"
keywords = ['ipx800', 'GCE-Electronics', 'GCE', 'home-automation']
classifiers = ["Topic :: Home Automation",
               "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
               "License :: OSI Approved :: Apache Software License",
               "Operating System :: OS Independent",
	       "Programming Language :: Python",
	       "Programming Language :: Python :: 3",
	       "Programming Language :: Python :: 3.8",
	       "Programming Language :: Python :: 3.9",
	       "Programming Language :: Python :: 3.10",
	       "Programming Language :: Python :: 3.11",
	       "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "ipx800" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/marcaurele/gce-ipx800/issues"

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<9"
pytest-cov = ">=4,<6"
coverage = {version = "^7.0", extras = ["toml"]}
codecov = "^2.1"
black = ">=23.1,<25.0"
ruff = ">=0.5.0,<0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38", "py39", "py310", "py311", "py312"]
line-length = 79

[tool.coverage.report]
exclude_lines = ["def __repr__"]
