[project]
name = "gce-ipx800"
version = "0.7.2"
description = "Library to interact with the GCE Electronics IPX800 device"
authors = [{ name = "Marc-Aurèle Brothier", email = "m@brothier.org" }]
requires-python = ">=3.9,<4"
readme = "README.rst"
license = "AGPL-3.0-or-later"
keywords = [
    "ipx800",
    "GCE-Electronics",
    "GCE",
    "home-automation",
]
classifiers = [
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["requests>=2.26,<3"]

[project.urls]
Homepage = "https://github.com/marcaurele/gce-ipx800"
Repository = "https://github.com/marcaurele/gce-ipx800"
"Bug Tracker" = "https://github.com/marcaurele/gce-ipx800/issues"

[dependency-groups]
dev = [
    "pytest>=7,<9",
    "pytest-cov>=4,<8",
    "coverage[toml]>=7.0,<8",
    "codecov>=2.1,<3",
    "ruff>=0.5.0,<0.15.8",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["ipx800"]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
include = ["pyproject.toml", "src/ipx800/**/*.py", "tests/**/*.py"]
line-length = 79

[tool.coverage.report]
exclude_lines = ["def __repr__"]
